<resources>
    <string name="app_name">SPOUSEMATCH</string>
    <string name="loginText">Login</string>
    <string name="enter_your_email_text">Enter your Email</string>
    <string name="enter_your_password_text">Enter your Password</string>
    <string name="complete_your_registration">Complete your registration</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_your_name">Enter your name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_notification">No notifications</string>
    <string name="title_activity_age_pref">AgePref</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome!</string>

    <!-- Strings used for fragments for navigation -->

</resources>