<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CompleteRegistration"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/finreg"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/complete_your_registration"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <com.hbb20.CountryCodePicker
        android:id="@+id/countrycode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ccp_contentColor="@color/black"
        app:ccpDialog_backgroundColor="@color/white"
        />
    <EditText
        android:id="@+id/phoneno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_phone_number"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        />
    <EditText
        android:id="@+id/fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_name"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        />
    <DatePicker
        android:id="@+id/birthdate"
        android:theme="@style/MyDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:calendarTextColor="@color/black"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male"
            android:layout_marginRight="20dp"
            android:textColor="@color/black"
            />
        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"
            android:textColor="@color/black"
            />
    </RadioGroup>

    <Button
        android:id="@+id/nexttoreligion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Next"
        />

</LinearLayout>